--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@splinetool/loader": "^0.9.419",
     "@splinetool/runtime": "^0.9.419",
-    "three": "^0.154.0"
+    "three": "^0.156.1",
+    "vite-plugin-glsl": "^1.1.2"
   }
 }
